<resources>
    <string name="app_name">Chat Digitus</string>
    <string name="username">E-Posta</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap </string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="email">E-posta</string>
    <string name="repeatpassword">Şifre(Tekrar)</string>
    <string name="register">Kayıt Ol</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
