<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/ButtonLogin"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="245dp"
        android:layout_marginEnd="76dp"
        android:text="@string/login" />

    <EditText
        android:id="@+id/E-Mail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="135dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/background_dark"
        android:textColorLink="@android:color/darker_gray" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="198dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/background_dark"
        android:textColorLink="@android:color/darker_gray" />

    <Button
        android:id="@+id/ButtonRegister"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/ButtonLogin"
        android:layout_marginBottom="143dp"
        android:text="@string/register" />
</RelativeLayout>