<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Register">

    <EditText
        android:id="@+id/Name"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/background_dark"
        android:textColorLink="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/SurName"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/background_dark"
        android:textColorLink="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/Name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Name"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <EditText
        android:id="@+id/rPassword"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/background_dark"
        android:textColorLink="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/rE-Mail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rE-Mail"
        app:layout_constraintTop_toBottomOf="@+id/rE-Mail" />

    <EditText
        android:id="@+id/rPassworda"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="202dp"
        android:ems="10"
        android:hint="@string/repeatpassword"
        android:inputType="textPassword"
        android:textColorHint="@android:color/background_dark"
        android:textColorLink="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/rPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rPassword"
        app:layout_constraintTop_toBottomOf="@+id/rPassword" />

    <EditText
        android:id="@+id/rE-Mail"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="193dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/background_dark"
        android:textColorLink="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/SurName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/SurName"
        app:layout_constraintTop_toBottomOf="@+id/SurName" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="125dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>